--- a/src/soft/java/interfaces/MainMenu.form
+++ b/src/soft/java/interfaces/MainMenu.form
@@ -242,7 +242,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="f6" green="f3" red="ef" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="FIFASM"/>
+            <Property name="text" type="java.lang.String" value="SIFASM"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
